<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProfilePickeR Plus</string>
    <string name="hello_world">Hello world!</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="title_main_section1">メモ</string>
    <string name="title_main_section2">プロフィール</string>
    <string name="title_main_section3">パスワード</string>
    <string name="title_edit_section1">メモ編集</string>
    <string name="title_edit_section2">プロフィール編集</string>
    <string name="title_edit_section3">パスワード編集</string>
    <string name="no_profile">プロフィール情報がありません。</string>
    <string name="no_memo">メモがありません。</string>
    <string name="no_password">パスワードがありません。</string>
    <string name="edit_no_memo">タップしてメモを追加。</string>
    <string name="edit_no_password">タップしてパスワードを追加。</string>
    <string name="menu_edit">編集</string>
    <string name="menu_qrcode">QRコード</string>
    <string name="menu_share">共有</string>
    <string name="menu_settings">設定</string>
    <string name="menu_save">保存</string>
    <string name="menu_cancel">破棄</string>
    <string name="section_name">名前</string>
    <string name="section_phone_number">電話番号</string>
    <string name="section_mail">メールアドレス</string>
    <string name="section_address">住所</string>
    <string name="section_member">所属</string>
    <string name="section_birthday">誕生日</string>
    <string name="section_memo">メモ</string>
    <string name="copy_toast_text">「%1$s」をクリップボードにコピーしました。</string>
    <string name="hint_name1">苗字</string>
    <string name="hint_name2">名前</string>
    <string name="hint_reading1">みょうじ</string>
    <string name="hint_reading2">なまえ</string>
    <string name="new_addition">新規追加</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="execute">実行</string>
    <string name="share_pref">共有に項目を含める</string>
    <string name="error">エラー</string>
    <string name="empty_message">項目が空です。</string>
    <string name="comfirmation">確認</string>
    <string name="comfirm_save">編集内容を保存します。よろしいですか。</string>
    <string name="comfirm_dest">編集内容を破棄します。よろしいですか。</string>
    <string name="comfirm_delete">この項目を削除します。よろしいですか。</string>
    <string name="custom">カスタム</string>
    <string name="edit_tag">タグの編集</string>
    <string name="edit_share_text">共有内容の確認</string>
    <string name="select_share_to">共有先を選択</string>
    <string name="menu_image_title">画像設定メニュー</string>
    <string name="menu_mushroom_title">選択メニュー</string>
    <string name="qr_empty_warning">QRコードで送信可能な、共有が許可された項目がありません。\n詳しくはヘルプをご覧下さい。</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="date_splitter">/</string>
    <string name="share_name">%1$s:%2$s %3$s(%4$s %5$s)</string>
    <string name="share_profile">\n%1$s(%2$s):%3$s</string>
    <string name="share_birthday_or_memo">\n%1$s:%2$s</string>
    <string name="error_camera">写真の取得に失敗しました。別のカメラアプリをお試しください。</string>
    <string name="error_gallary">写真の取得に失敗しました。別のギャラリーアプリをお試しください。</string>
    <string name="error_trimming">写真の加工に失敗しました。別のトリミングアプリをお試しください。</string>
    <string name="error_load_image">画像の読み込みに失敗しました。</string>
    <string name="error_save_image">画像の保存に失敗しました。</string>
    <string name="pref_group_backup_restore">バックアップ、リストア</string>
    <string name="pref_backup">バックアップ</string>
    <string name="pref_backup_desc">SDカードへデータのバックアップを行います。</string>
    <string name="pref_restore">リストア</string>
    <string name="pref_resotre_desc">SDカードからデータのリストアを行います。</string>
    <string name="pref_group_about">ヘルプ</string>
    <string name="pref_help_qr">QRコードについて</string>
    <string name="pref_help_mushroom">マッシュルーム機能について</string>
    <string name="pref_about">アプリについて</string>
    <string name="dialog_save_failure">項目の保存に失敗しました。</string>
    <string name="dialog_backup">SDカードへバックアップを行います。\n既存のバックアップは上書きされますのでご注意ください。</string>
    <string name="dialog_during_backup_title">バックアップ中</string>
    <string name="dialog_during_backup">しばらくお待ちください&#8230;</string>
    <string name="dialog_complete_backup">SDカードへのバックアップが完了しました。</string>
    <string name="dialog_error_backup">SDカードへのバックアップに失敗しました。</string>
    <string name="dialog_restore">SDカードからリストアを行います。\n既存の項目はすべて上書きされますのでご注意ください。</string>
    <string name="dialog_during_restore_title">リストア中</string>
    <string name="dialog_during_restore">しばらくお待ちください&#8230;</string>
    <string name="dialog_complete_restore">SDカードからのリストアが完了しました。</string>
    <string name="dialog_error_restore">SDカードからのリストアに失敗しました。</string>
    <string name="dialog_backup_not_found">バックアップファイルが見つかりません。</string>
    <string name="dialog_qr_help">QRコードで送信できる情報は「名前」「ふりがな」「電話番号」「メールアドレス」「住所」に限られます。\n\n端末やメーカー、キャリアによっては登録できない項目や登録数に制限のある端末もございます。\n\nまたアプリによってはうまく読み取れない可能性もございます。\nその際は別のQRコード読み取りアプリをお試しください。</string>
    <string name="dialog_mushroom_help">マッシュルーム機能とはお使いのソフトウェアキーボード上から別のアプリを呼び出して直接文字を張り付けることのできる仕組みを指します。\n本アプリもこの機能をサポートしています。\n\nマッシュルーム機能の呼び出し方はキーボードによって異なるのでお使いのキーボードのヘルプをご参照ください。\n\nキーボードによってはマッシュルームをサポートしていないこともありますのでご注意ください。</string>
    <string name="dialog_about_app_version">Version %1$s</string>
    <string name="dialog_about_creator">制作者</string>
    <string name="dialog_about_creator_content">kazakago</string>
    <string name="dialog_about_email">メールアドレス</string>
    <string name="dialog_about_email_content">kazakago@gmail.com</string>
    <string name="dialog_about_url">ホームページ</string>
    <string name="dialog_about_url_content">http://blog.kazakago.com/</string>
    <string name="dialog_about_copyright">&#169; 2013 %1$s</string>
    <string name="title_activity_profile">ProfilePickeR</string>
    <string name="title_activity_edit">プロフィール編集</string>
    <string name="title_activity_prefs">設定</string>
    <string name="layer_input_password">マスターパスワードを入力してください</string>
    <string name="layer_unlock_password">解除</string>
    <string name="layer_mistake_password">マスターパスワードが異なります</string>

</resources>
