<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_edit">
    </item>
    <item
        android:id="@+id/menu_qrcode"
        android:icon="@drawable/ic_menu_qrcode"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_qrcode">
    </item>
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="102"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_share">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="103"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_settings">
    </item>

</menu>
