<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/icon_app"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/dummy_text"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/text_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_app_name"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_about_app_version" />

        <TextView
            android:id="@+id/text_creator_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text_app_version"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_about_creator" />

        <TextView
            android:id="@+id/text_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_creator_title"
            android:layout_below="@+id/text_creator_title"
            android:layout_marginLeft="16dp"
            android:text="@string/dialog_about_creator_content" />

        <TextView
            android:id="@+id/text_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_mail_title"
            android:layout_below="@+id/text_mail_title"
            android:layout_marginLeft="16dp"
            android:autoLink="email"
            android:text="@string/dialog_about_email_content" />

        <TextView
            android:id="@+id/text_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_url_title"
            android:layout_below="@+id/text_url_title"
            android:layout_marginLeft="16dp"
            android:autoLink="web"
            android:text="@string/dialog_about_url_content" />

        <TextView
            android:id="@+id/text_mail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_creator_title"
            android:layout_below="@+id/text_creator"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_about_email" />

        <TextView
            android:id="@+id/text_url_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text_mail_title"
            android:layout_below="@+id/text_mail"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_about_url" />

        <TextView
            android:id="@+id/text_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/text_url"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/dialog_about_copyright" />
    </RelativeLayout>

</ScrollView>