<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_fragment_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/image_edit_face"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/image_face"
        android:contentDescription="@string/dummy_text"
        android:scaleType="fitCenter"
        android:src="@drawable/no_image" />

    <ImageView
        android:id="@+id/divide_edit_profile"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image_edit_face"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dummy_text"
        android:scaleType="fitXY"
        android:src="@android:color/holo_blue_bright" />

    <ListView
        android:id="@+id/list_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divide_edit_profile"
        android:divider="@color/transparency" >
    </ListView>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_edit_face"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/image_edit_face" >

        <EditText
            android:id="@+id/field_edit_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_name1"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_medium" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/field_edit_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_name2"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_name"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@+id/image_edit_face" >

        <EditText
            android:id="@+id/field_edit_reading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_reading1"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_medium" />

        <EditText
            android:id="@+id/field_edit_reading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/hint_reading2"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

</RelativeLayout>